renamed asstes n filereplacement in angular.json

--- a/angular.json
+++ b/angular.json
@@ -22,12 +22,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "node_modules/ngx-scanner-qrcode/wasm/",
-                "output": "./assets/wasm/"
-              }
+              "src/assets"              
             ],
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
@@ -48,6 +43,12 @@
                   "type": "anyComponentStyle",
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.development.ts",
+                  "with": "src/environments/environment.ts"
                 }
               ],
               "outputHashing": "all"
