--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/router": "^16.2.0",
     "angularx-qrcode": "^16.0.2",
     "bootstrap": "^5.3.2",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "ngx-scanner-qrcode": "^1.6.9",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.4",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
